fix(table-design): adjust table design layout

--- a/src/components/SchemaForm/SchemaForm.css
+++ b/src/components/SchemaForm/SchemaForm.css
@@ -3,10 +3,10 @@
      margin-bottom: var(--schema-gap)
  }
 
- .schema-form :where(.css-dev-only-do-not-override-1hsjdkk).ant-form-item .ant-form-item-label>label {
+ .schema-form .ant-form-item .ant-form-item-label>label {
      height: var(--schema-height)
  }
 
- .schema-form :where(.css-dev-only-do-not-override-1hsjdkk).ant-form-item .ant-form-item-control-input {
+ .schema-form .ant-form-item .ant-form-item-control-input {
      min-height: var(--schema-height)
  }
