--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -37,4 +37,22 @@ $half-gap:calc($gap / 2);
     padding: $gap 24px;
   }
 }
+.full-modal {
+  .ant-modal {
+    max-width: 100%;
+    top: 0;
+    padding-bottom: 0;
+    margin: 0;
+  }
+
+  .ant-modal-content {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh);
+  }
+
+  .ant-modal-body {
+    flex: 1;
+  }
+}
 
